--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Olá, Eu so​u a, !, INTUITIVE">
     <meta name="description" content="">
     <title>Chatbot A.N.A</title>
-    <link rel="shortcut icon" href="images/globo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/globo_branco.png" type="image/x-icon">
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Página-Inicial.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
